# config-manager

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
doc/: Doxyfile
ext/: Makefile.am
src/: Makefile.am  config.cpp  config.h  env.cpp  env.h  env_reflector.h  main.cpp  parser.cpp  parser.h  render.cpp  render.h  settings.cpp  settings.h
tests/: Makefile.am  run-test.py  test1.sh  test2.yaml  test3.yaml  test_doc.yaml  test_env.yaml  test_errors.yaml  test_get.yaml  test_get2.yaml  test_override.yaml  test_recursive.yaml  test_render.yaml  test_shell.yaml  test_strings.yaml
